# minicode

./: .gitignore  README.md  data.csv  pyproject.toml
.codeclaw/skills/: research-data-analysis.md
ai_code/: demo_edit.txt  huawei.py  trapping_rain_water.py  try1.py
docs/: development.md
skills/ci-failure/: SKILL.md
skills/code-review/: SKILL.md
skills/fix-bug/: SKILL.md
skills/git-workflow/: SKILL.md
skills/plan-task/: SKILL.md
skills/repo-understanding/: SKILL.md
skills/run-tests/: SKILL.md
skills/update-docs/: SKILL.md
src/agent_core/: __init__.py  agent.py  agent_loop.py  types.py
src/ai/: __init__.py  models.py  stream.py  types.py
src/ai/providers/: anthropic.py
src/coding_agent/: __init__.py  agent_session.py  artifacts.py  builtin_tools.py  cli.py  command_registry.py  convert_to_llm.py  factory.py  memory.py  multi_agent.py  resources.py  runner.py  security.py  session_store.py  skill_embeddings.py  system_prompt.py  types.py  watch_compile.py
src/coding_agent/extensions/: loader.py  skills.py  types.py
src/coding_agent/mcp/: __init__.py  bridge.py
