[project]
name = "codeclaw"
version = "0.2.0"
description = "CodeClaw: unified LLM API + agent core + coding agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]
embedding = ["sentence-transformers>=3.0.0"]

[project.scripts]
codeclaw = "coding_agent.cli:main"
codeclaw-watch = "coding_agent.watch_compile:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
